--- a/documentation/b.yaml
+++ b/documentation/b.yaml
@@ -138,11 +138,9 @@ proxies:
   - {name: US 1192 → tg@nicevpn123, server: frontend.kuangbiaoyun.com, port: 40019, type: trojan, password: ad953998-e8ea-4d5b-8b2f-e63edd9d375d, sni: frontend.kuangbiaoyun.com, skip-cert-verify: true, udp: true}
   - {name: -SG-007, server: 103.172.116.103, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga, udp: true}
   - {name: US 501 → tg@nicevpn123, server: us1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen, port: 443, type: trojan, password: 7b01f853-1c72-47db-8f57-151d491b3bf9, sni: us1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen, skip-cert-verify: true, udp: true}
-  - {name: Trojan|日本A01--直连节点
-, server: tro.at678.top, port: 4202, type: trojan, password: 901a6458-7c68-47c9-8500-75e73c4365a8, sni: tro.at678.top, skip-cert-verify: true, udp: true}
+  - {name: Trojan|日本A01--直连节点, server: tro.at678.top, port: 4202, type: trojan, password: 901a6458-7c68-47c9-8500-75e73c4365a8, sni: tro.at678.top, skip-cert-verify: true, udp: true}
   - {name: 韩国_012218033, server: 64.110.90.139, port: 54000, type: trojan, password: fd119d80-5029-45bf-85c6-bd0b3080cb25, skip-cert-verify: true, udp: true}
-  - {name: Trojan|香港A01--直连节点
-, server: tro.at678.top, port: 4201, type: trojan, password: 901a6458-7c68-47c9-8500-75e73c4365a8, sni: tro.at678.top, skip-cert-verify: true, udp: true}
+  - {name: Trojan|香港A01--直连节点, server: tro.at678.top, port: 4201, type: trojan, password: 901a6458-7c68-47c9-8500-75e73c4365a8, sni: tro.at678.top, skip-cert-verify: true, udp: true}
   - {name: CN_speednode_0050, server: 183.236.51.6, port: 10803, type: trojan, password: aa002102-5e81-4c47-ba3c-f78ebbfa0d59, skip-cert-verify: true, udp: true}
   - {name: CN_speednode_0043, server: 183.236.51.6, port: 10805, type: trojan, password: 17f47376-1c4e-4684-892e-887b21d16573, skip-cert-verify: true, udp: true}
   - {name: 美国2|@ripaojiedian, server: service.ouluyun9803.com, port: 20003, type: ss, cipher: chacha20-ietf-poly1305, password: cfa17a0d-5e7d-4871-976e-f116e0818123, udp: true}
@@ -158,8 +156,7 @@ proxies:
   - {name: 日本2|@ripaojiedian, server: service.ouluyun9803.com, port: 26668, type: ss, cipher: chacha20-ietf-poly1305, password: cfa17a0d-5e7d-4871-976e-f116e0818123, udp: true}
   - {name: 美国-108.9KB/s, server: cfcdn3.sanfencdn9.com, port: 80, type: vmess, uuid: d0a3e08a-d26f-45bd-ba3c-6387f9182633, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /video/ibCT6z55, ws-headers: {Host: agzbjszujp4.yofnhkfc.xyz}, udp: true}
   - {name: CN_speednode_0062, server: 183.236.51.7, port: 10834, type: trojan, password: 17f47376-1c4e-4684-892e-887b21d16573, skip-cert-verify: true, udp: true}
-  - {name: Trojan|韩国A01--直连节点
-, server: tro.at678.top, port: 4205, type: trojan, password: 901a6458-7c68-47c9-8500-75e73c4365a8, sni: tro.at678.top, skip-cert-verify: true, udp: true}
+  - {name: Trojan|韩国A01--直连节点, server: tro.at678.top, port: 4205, type: trojan, password: 901a6458-7c68-47c9-8500-75e73c4365a8, sni: tro.at678.top, skip-cert-verify: true, udp: true}
   - {name: CN_speednode_0037, server: 183.236.51.6, port: 10801, type: trojan, password: aa002102-5e81-4c47-ba3c-f78ebbfa0d59, skip-cert-verify: true, udp: true}
   - {name: AL_248, server: 31.171.153.182, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3, udp: true}
   - {name: 英国_012218034, server: uk1.test3.net, port: 443, type: trojan, password: dcee8e40-b185-11ee-86de-1239d0255272, sni: uk1.test3.net, skip-cert-verify: true, udp: true}
