--- a/documentation/b.yaml
+++ b/documentation/b.yaml
@@ -12002,4 +12002,4 @@ rules:
  - DOMAIN-KEYWORD,Thunder,🎯 全球直连
  - DOMAIN-KEYWORD,XLLiveUD,🎯 全球直连
  - GEOIP,CN,🎯 全球直连
- - MATCH,🐟 漏网之鱼s
+ - MATCH,🐟 漏网之鱼
