--- a/documentation/a.yaml
+++ b/documentation/a.yaml
@@ -210,7 +210,7 @@ proxy-groups:
       - -SG-010
   - name: ♻️ 自动选择
     type: url-test
-    url: http://www.gstatic.com/generate_204
+    url: http://www.youtube.com/generate_204
     interval: 300
     proxies:
       - 美国 CloudFlare节点 4
@@ -10421,6 +10421,15 @@ rules:
   - DOMAIN,ocsp.int-x3.letsencrypt.org,🔰 节点选择
   - DOMAIN,a248.e.akamai.net,🔰 节点选择
   - DOMAIN,a771.dscq.akamai.net,🔰 节点选择
+  - PROCESS-NAME,GalaxyClient,🔰 节点选择
+  - PROCESS-NAME,Gwent,🔰 节点选择
+  - PROCESS-NAME,Steam,🔰 节点选择
+  - PROCESS-NAME,iTerm2,🔰 节点选择
+  - PROCESS-NAME,Microsoft To Do,🔰 节点选择
+  - PROCESS-NAME,clash-config-manager,🔰 节点选择
+  - PROCESS-NAME,clash-config-manager Helper,🔰 节点选择
+  - PROCESS-NAME,clash-config-manager Helper(GPU),🔰 节点选择
+  - PROCESS-NAME,clash-config-manager Helper(Renderer),🔰 节点选择
   - DOMAIN-SUFFIX,amazon.co.jp,🔰 节点选择
   - DOMAIN,d3c33hcgiwev3.cloudfront.net,🔰 节点选择
   - DOMAIN,payments-jp.amazon.com,🔰 节点选择
