--- a/documentation/b.yaml
+++ b/documentation/b.yaml
@@ -7,15 +7,26 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: "[Trojan] 0|-https://t.me/MrXbin-35", server: at1.trojanvpn.de, port: 2053, type: trojan, password: 09191dbf-e7f7-4e7d-b405-c4785ea992bf, sni: ftp.debian.org, skip-cert-verify: false, udp: true}
+  - {name: "[Trojan] 0|-https://t.me/MrXbin-35 2", server: at1.trojanvpn.de, port: 2053, type: trojan, password: 09191dbf-e7f7-4e7d-b405-c4785ea992bf, sni: ftp.debian.org, skip-cert-verify: false, udp: true}
   - {name: "[Trojan] 0|-https://t.me/MrXbin-71", server: 95.164.9.196, port: 2053, type: trojan, password: 09191dbf-e7f7-4e7d-b405-c4785ea992bf, sni: ftp.debian.org, skip-cert-verify: false, udp: true}
   - {name: "[Trojan] 0|-https://t.me/MrXbin-76", server: us04.421421.xyz, port: 20230, type: trojan, password: d971ee7a-32d9-402a-8a4f-d2135d48a47b, sni: 421421.xyz, skip-cert-verify: false, udp: true}
+  - {name: "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029", server: 183.232.199.28, port: 43002, type: vmess, uuid: aaaaaaaa-aaaa-aaaa-aaaa-daaaaaaaaaad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, udp: true}
   - {name: "[Trojan] 广东", server: 183.232.139.22, port: 4027, type: trojan, password: gkviEOYc, skip-cert-verify: false, udp: true}
+  - {name: "[Trojan] 广东 2", server: 183.232.139.22, port: 4027, type: trojan, password: gkviEOYc, skip-cert-verify: false, udp: true}
+  - {name: "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061", server: 172.67.144.2, port: 2052, type: vmess, uuid: 1d95edba-c8c7-4f0e-be25-5503fa31b509, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: ptdny.xyyjc.top}}, udp: true}
+  - {name: "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065", server: 104.17.16.37, port: 2052, type: vmess, uuid: 1d95edba-c8c7-4f0e-be25-5503fa31b509, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: ptddg.xyyjc.top}}, udp: true}
+  - {name: "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095", server: 104.19.47.153, port: 8080, type: vmess, uuid: b551aa22-22af-11ee-b8d8-f23c932eb68d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: oiictw.yydsii.com}}, udp: true}
+  - {name: "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096", server: 104.19.47.238, port: 8080, type: vmess, uuid: b551aa22-22af-11ee-b8d8-f23c932eb68d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: oiictw.yydsii.com}}, udp: true}
+  - {name: "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107", server: zula.ir, port: 80, type: vmess, uuid: 1886c4a7-c395-4aee-a1a2-a816722f5d29, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: Pl2.vmess.site.}}, udp: true}
+  - {name: "[SS] 🇨🇳 [SS] 广东省东莞市 移动", server: rk2.izoizoizo.top, port: 46091, type: ss, cipher: chacha20-ietf-poly1305, password: 4aa5bc5a-5574-4ec6-9c34-d2a5e9ee1d53, udp: true}
   - {name: "[SS] 🇨🇳 广东2", server: 119.23.104.213, port: 8474, type: ss, cipher: chacha20-ietf-poly1305, password: a501c82c72d790b8, udp: true}
+  - {name: "[SS] 🇨🇳 广东2 2", server: 119.23.104.213, port: 8474, type: ss, cipher: chacha20-ietf-poly1305, password: a501c82c72d790b8, udp: true}
   - {name: "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心", server: 3.127.173.9, port: 22222, type: trojan, password: telegram-id-privatevpns, sni: trojan.burgerip.co.uk, skip-cert-verify: false, udp: true}
   - {name: "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3", server: 51.77.53.200, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4, udp: true}
   - {name: "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4", server: 51.77.53.200, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG, udp: true}
   - {name: "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61", server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC, udp: true}
   - {name: "[SS] 🇭🇰 香港R|@ripaojiedian", server: 59.56.77.178, port: 15001, type: ss, cipher: aes-256-cfb, password: hGkQ6915tD, udp: true}
+  - {name: "[SS] 🇭🇰 香港R|@ripaojiedian 2", server: 59.56.77.178, port: 15001, type: ss, cipher: aes-256-cfb, password: hGkQ6915tD, udp: true}
   - {name: "[SS] 🇯🇵 日本R|@ripaojiedian", server: 59.56.77.178, port: 15084, type: ss, cipher: aes-256-cfb, password: hGkQ6915tD, udp: true}
   - {name: "[VMess] 🇰🇷 KR 24 → tg@nicevpn123", server: 103.214.68.57, port: 10001, type: vmess, uuid: ebca5f68-bf59-4081-e658-f158839c2f5c, alterId: 0, cipher: auto, tls: true, skip-cert-verify: false, udp: true}
   - {name: "[SS] 🇵🇱 _PL_波兰_12", server: 51.77.53.200, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC, udp: true}
@@ -23,8 +34,11 @@ proxies:
   - {name: "[SS] 🇵🇱 _PL_波兰_18", server: 51.77.53.200, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74, udp: true}
   - {name: "[SS] 🇵🇱 _PL_波兰_3", server: 51.77.53.200, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP, udp: true}
   - {name: "[SS] 🇵🇱 _PL_波兰_9", server: 51.77.53.200, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v, udp: true}
+  - {name: "[SS] 🇵🇱 _PL_波兰_9 2", server: 51.77.53.200, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v, udp: true}
+  - {name: "[SS] 🇸🇬 狮城特殊|@ripaojiedian", server: 43.201.17.220, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05, udp: true}
   - {name: "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2", server: 172.67.144.12, port: 2052, type: vmess, uuid: 1d95edba-c8c7-4f0e-be25-5503fa31b509, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: ptddg.xyyjc.top}}, udp: true}
   - {name: "[SS] 🇺🇸 美国R|@ripaojiedian", server: 59.56.77.178, port: 16058, type: ss, cipher: aes-256-cfb, password: hGkQ6915tD, udp: true}
+  - {name: "[SS] 🇺🇸 美国R|@ripaojiedian 2", server: 59.56.77.178, port: 16058, type: ss, cipher: aes-256-cfb, password: hGkQ6915tD, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -32,15 +46,26 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -48,23 +73,37 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.youtube.com/generate_204
     interval: 300
     proxies:
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -72,8 +111,11 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: 🎥 NETFLIX
     type: select
     proxies:
@@ -81,15 +123,26 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -97,8 +150,11 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -118,15 +174,26 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -134,13 +201,17 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -148,15 +219,26 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -164,23 +246,37 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -188,8 +284,11 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -197,15 +296,26 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -213,8 +323,11 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -231,15 +344,26 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - "[Trojan] 0|-https://t.me/MrXbin-35"
+      - "[Trojan] 0|-https://t.me/MrXbin-35 2"
       - "[Trojan] 0|-https://t.me/MrXbin-71"
       - "[Trojan] 0|-https://t.me/MrXbin-76"
+      - "[VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] [VMess] CN_speednode_0029"
       - "[Trojan] 广东"
+      - "[Trojan] 广东 2"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 061"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 065"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 095"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 096"
+      - "[VMess] 🇨🇦 [VMess] 🇨🇦 加拿大 107"
+      - "[SS] 🇨🇳 [SS] 广东省东莞市 移动"
       - "[SS] 🇨🇳 广东2"
+      - "[SS] 🇨🇳 广东2 2"
       - "[Trojan] 🇩🇪 [Trojan] 🇩🇪 德国 黑森州法兰克福Amazon数据中心"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 3"
       - "[SS] 🇫🇷 [SS] 🇫🇷 法国 OVH 4"
       - "[SS] 🇫🇷 法国【付费推荐：https://jdyvip.link】61"
       - "[SS] 🇭🇰 香港R|@ripaojiedian"
+      - "[SS] 🇭🇰 香港R|@ripaojiedian 2"
       - "[SS] 🇯🇵 日本R|@ripaojiedian"
       - "[VMess] 🇰🇷 KR 24 → tg@nicevpn123"
       - "[SS] 🇵🇱 _PL_波兰_12"
@@ -247,8 +371,11 @@ proxy-groups:
       - "[SS] 🇵🇱 _PL_波兰_18"
       - "[SS] 🇵🇱 _PL_波兰_3"
       - "[SS] 🇵🇱 _PL_波兰_9"
+      - "[SS] 🇵🇱 _PL_波兰_9 2"
+      - "[SS] 🇸🇬 狮城特殊|@ripaojiedian"
       - "[VMess] 🇺🇸 [VMess] 🇺🇸 美国 CloudFlare节点 2"
       - "[SS] 🇺🇸 美国R|@ripaojiedian"
+      - "[SS] 🇺🇸 美国R|@ripaojiedian 2"
 rules:
   - DOMAIN-SUFFIX,local,🎯 全球直连
   - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
